# seo-mcp-agent

./: .env.example  AIDA-S.md  EMBEDDING_PROVIDER_CHANGES.md  LICENSE  Makefile  PROJECT_MVP.md  README.md  Sly, семантика грузоперевозки. - Лист1.csv  ai_seo_service_full.md  ai_seo_service_ml.md  docker-compose.yml  main-goal.md  notes.md  pyproject.toml  seo_agent_description_roadmap.md  test_av_by.py  test_integration.py  test_stopwords.py  www.dellin.ru____short.json
.github/agents/: seo-mcp-developer.agent.md
.github/workflows/: docs.yml
_build/logs/: myst.build.json
containers/: Dockerfile.dev  Makefile  docker-compose.dev.yml
desktop/: main.py
docker/: init-extensions.sql  init-pgvector.sql
docs/: Makefile.md  README.md  _config.yml  _toc.yml  api-docs.md  cli-usage.md  clustering.md  conf.py  configuration.md  desktop-app.md  development.md  documentation-setup.md  examples.md  features.md  getting-started.md  index.md  index.rst  installation.md  intent-clustering-implementation-plan.md  intent-detection.md  keyword-extraction.md  quick-start.md  references.bib  semantic-analyze-status.md  semantic-core-implementation.md  semantic-core-template.csv  serp-analysis.md  user-guide.md  web-interface.md
docs/examples/: advanced-clustering.md  basic-analysis.md  custom-integration.md
scripts/: README.md  create-migration.sh  db-logs.sh  db-shell.sh  init-db.sh  llm.sh  migrate.sh  reset-db.sh  start-db.sh  stop-db.sh  tmp_check_export_all_clusters.py  tmp_check_intents_page.py  tmp_cookie_restore_e2e.py
src/: main.py
src/db/: README.md  __init__.py  alembic.ini  init_db.py  manager.py  models.py
src/db/migrations/: env.py
src/seo_agent/api/: __init__.py  agent.py  routers.py
src/seo_agent/cli/: main.py
src/seo_agent/models/: __init__.py
src/seo_agent/templates/: base.html  clusters.html  index.html  intents.html  keywords.html  navbar.html
tests/: test_intent_detection.py  test_upload_intent_mapping.py
tests/postman/: intent_detection_integration.postman_collection.json
(+17 files in other folders)
